Fix MRCM tests.